showing something to Scott

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome, Home#index</h1>
+<h1>Welcome, Nearcast</h1>
 <p>Find me in app/views/home/index.html.erb</p>
 <p> This is a sandbox for nearcast Rails developerment.
 
